--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,13 +10,68 @@ on:
       DEPLOY_TOKEN:
         required: true
 
+env:
+  NODE_VERSION: '14' # Node.jsのバージョン
+
 jobs:
-  deploy:
+  # 開発環境へのデプロイ
+  deploy-dev:
     runs-on: ubuntu-latest
+    # if: github.ref == 'refs/heads/develop'
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v2
-      
-      - name: Deploy to Environment
-        run: |
-          echo "Deploying to ${{ inputs.environment }}"
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Deploy to Development Environment
+        run: echo "Deploying to Development Environment"
+        # 開発環境へのデプロイスクリプトを記述
+
+  # # ステージング環境へのデプロイ
+  # deploy-staging:
+  #   runs-on: ubuntu-latest
+  #   if: github.event_name == 'pull_request' && github.base_ref == 'main'
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v2
+
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: ${{ env.NODE_VERSION }}
+
+  #     - name: Install dependencies
+  #       run: npm install
+
+  #     - name: Build and Test
+  #       run: npm test
+
+  #     - name: Deploy to Staging Environment
+  #       run: echo "Deploying to Staging Environment"
+  #       # ステージング環境へのデプロイスクリプトを記述
+
+  # # 本番環境へのデプロイ
+  # deploy-prod:
+  #   runs-on: ubuntu-latest
+  #   if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v2
+
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: ${{ env.NODE_VERSION }}
+
+  #     - name: Install dependencies
+  #       run: npm install
+
+  #     - name: Deploy to Production Environment
+  #       run: echo "Deploying to Production Environment"
