--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy to Development ENV_VAR
-        run: echo ${{ env.ENV_VAR }}
+        run: echo ${{ inputs.ENV_VAR }}
         # 開発環境へのデプロイスクリプトを記述
 
   # ステージング環境へのデプロイ
