--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
         required: true
         type: string
     secrets:
-      SLACK_WEBHOOK_URL_STG:
+      SLACK_WEBHOOK_URL_FAILED:
         required: true
 
 jobs:
@@ -41,4 +41,4 @@ jobs:
         run: echo ${{ inputs.ENV_VAR }}
 
       - name: Deploy to Development SLACK_WEBHOOK_URL_FAILED
-        run: echo ${{ secrets.SLACK_WEBHOOK_URL_STG }}
+        run: echo ${{ secrets.SLACK_WEBHOOK_URL_FAILED }}
