--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,8 @@ on:
     secrets:
       SLACK_WEBHOOK_URL_FAILED:
         required: true
-
+      SLACK_WEBHOOK_URL_FAILED_2:
+        required: true
 
 # common env
 env:
@@ -48,5 +49,5 @@ jobs:
 
       - name: Deploy to Development SLACK_WEBHOOK_URL_FAILED
         run: |
-          - echo ${{ secrets.SLACK_WEBHOOK_URL_FAILED }}
-          - echo ${{ env.ENV_SLACK_WEBHOOK_URL_FAILED }}
+          echo ${{ env.ENV_SLACK_WEBHOOK_URL_FAILED }}
+          echo ${{ secrets.SLACK_WEBHOOK_URL_FAILED_2 }}
