--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,3 +51,13 @@ jobs:
         run: |
           echo ${{ env.ENV_SLACK_WEBHOOK_URL_FAILED }}
           echo ${{ secrets.SLACK_WEBHOOK_URL_FAILED_2 }}
+
+      # 失敗時はこちらのステップが実行される
+      - name: Slack Notification on Failure
+        uses: rtCamp/action-slack-notify@v2.3.2
+        if: always()
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL_FAILED }}
+          SLACK_TITLE: GitHub Actions 失敗通知
+          SLACK_COLOR: danger
+          SLACK_MESSAGE: '<!here> ワークフロー "${{ github.workflow }}" のジョブ "${{ github.job }}" が失敗しました。'
