--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,4 +60,14 @@ jobs:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL_FAILED }}
           SLACK_TITLE: GitHub Actions 失敗通知
           SLACK_COLOR: danger
-          SLACK_MESSAGE: '<!here> ワークフロー "${{ github.workflow }}" のジョブ "${{ github.job }}" が失敗しました。'
+          SLACK_MESSAGE: '<!here> SLACK_WEBHOOK_URL_FAILEDワークフロー "${{ github.workflow }}" のジョブ "${{ github.job }}" が失敗しました。'
+
+      # 失敗時はこちらのステップが実行される
+      - name: Slack Notification on Failure
+        uses: rtCamp/action-slack-notify@v2.3.2
+        if: always()
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL_FAILED_2 }}
+          SLACK_TITLE: GitHub Actions 失敗通知
+          SLACK_COLOR: danger
+          SLACK_MESSAGE: '<!here> SLACK_WEBHOOK_URL_FAILED_2ワークフロー "${{ github.workflow }}" のジョブ "${{ github.job }}" が失敗しました。'
