--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,9 +53,9 @@ jobs:
           echo ${{ env.ENV_SLACK_WEBHOOK_URL_FAILED }}
           echo ${{ secrets.SLACK_WEBHOOK_URL_FAILED_2 }}
 
-      # わざと失敗させるステップを追加
-      - name: Force Failure
-        run: exit 1
+      # # わざと失敗させるステップを追加
+      # - name: Force Failure
+      #   run: exit 1
 
       # 失敗時はこちらのステップが実行される
       - name: Slack Notification on Failure
@@ -73,18 +73,18 @@ jobs:
             ブランチ: ${{ github.ref_name }}
             実行URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
 
-      # 失敗時はこちらのステップが実行される
-      - name: Slack Notification on Failure
-        uses: rtCamp/action-slack-notify@v2.3.2
-        if: ${{ !success() }}
-        env:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL_FAILED_2 }}
-          SLACK_TITLE: GitHub Actions 失敗通知
-          SLACK_COLOR: danger
-          SLACK_MESSAGE: |
-            <!here> GitHub Actionsが失敗しました
-            ステータス: ${{ job.status }}
-            ワークフロー: ${{ github.workflow }}
-            リポジトリ: ${{ github.repository }}
-            ブランチ: ${{ github.ref_name }}
-            実行URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      # # 失敗時はこちらのステップが実行される
+      # - name: Slack Notification on Failure
+      #   uses: rtCamp/action-slack-notify@v2.3.2
+      #   if: ${{ !success() }}
+      #   env:
+      #     SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL_FAILED_2 }}
+      #     SLACK_TITLE: GitHub Actions 失敗通知
+      #     SLACK_COLOR: danger
+      #     SLACK_MESSAGE: |
+      #       <!here> GitHub Actionsが失敗しました
+      #       ステータス: ${{ job.status }}
+      #       ワークフロー: ${{ github.workflow }}
+      #       リポジトリ: ${{ github.repository }}
+      #       ブランチ: ${{ github.ref_name }}
+      #       実行URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
