わざとエラー

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -89,3 +89,7 @@ jobs:
       #       リポジトリ: ${{ github.repository }}
       #       ブランチ: ${{ github.ref_name }}
       #       実行URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+
+  # わざと失敗させるステップを追加
+  - name: Force Failure
+    run: exit 1
