コメントアウト

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,10 +43,10 @@ jobs:
       - name: Deploy to Development ENV_VAR
         run: echo ${{ inputs.ENV_VAR }}
 
-      - name: Deploy to Development SLACK_WEBHOOK_URL_FAILED
-        run: |
-          echo ${{ env.ENV_SLACK_WEBHOOK_URL_FAILED }}
-          echo ${{ secrets.SLACK_WEBHOOK_URL_FAILED_2 }}
+      # - name: Deploy to Development SLACK_WEBHOOK_URL_FAILED
+      #   run: |
+      #     echo ${{ env.ENV_SLACK_WEBHOOK_URL_FAILED }}
+      #     echo ${{ secrets.SLACK_WEBHOOK_URL_FAILED_2 }}
 
       # わざと失敗させるステップを追加
       - name: Force Failure
